# AndroidChooseDemo

./: .gitmodules  README.md  build.gradle  dependencies.gradle  gradle.properties  sentry.properties  settings.gradle
buildSrc/: build.gradle
buildSrc/src/main/java/com/zhenxi/hunter/stringfog/: CustomKeyGenerator.java  CustomStringFogImpl.java
test/: build.gradle
test/src/main/: AndroidManifest.xml
test/src/main/cpp/: CMakeLists.txt  JvmTiWrapper.h  main.cpp
test/src/main/cpp/jvmti/: CMakeLists.txt  JvmTiWrapper.cpp
test/src/main/java/com/example/test/: ChooseUtils.java  MainActivity.java  NativeEngine.java
test/src/main/res/layout/: activity_main.xml
test/src/main/res/values/: strings.xml  themes.xml
test/src/main/res/values-night/: themes.xml
